--- a/css/components.css
+++ b/css/components.css
@@ -116,6 +116,28 @@
 }
 
 
+/* CTA **************************/
+.cta {
+    font-size:var(--type-xs);
+    font-weight:700;
+    color:var(--cobalt-600);
+    cursor: pointer;
+}
+.cta.primary {
+    display:flex;
+    gap:4px;
+    align-items: center;
+}
+
+.cta.primary svg {
+    width:12px;
+    height:12px;
+    fill:var(--cobalt-600);
+}
+
+.cta.primary.black {
+    color:var(--gray-800);
+}
 
 
 /* CHECKBOX **************************/
@@ -148,6 +170,8 @@
     fill: #fff;
     opacity: 1;
 }
+
+
 
 /* TOGGLE ****************/
 .toggle {
@@ -208,6 +232,128 @@
     color:var(--gray-700);
     font-weight:600;
 }
+
+
+/* PROGRESS INDICATOR *********************************/
+#progress-indicator {
+    padding:16px 32px;
+    background-color:#fff;
+    max-width:var(--main-area-max);
+    margin:auto;
+}
+
+#progress-indicator {
+    padding-left: 32px;
+    padding-right: 32px;
+    max-width:var(--main-area-max);
+    margin:auto;
+}
+
+/* HEADER */
+#progress-indicator .header {
+    padding:0;
+}
+
+#progress-indicator .title {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+#progress-indicator .title > * {
+    margin:0;
+}
+
+#progress-indicator .title .step-count {
+    font-size: var(--type-xxs);
+}
+
+/* INDICATOR */
+#progress-indicator .indicator {
+    margin-top:8px;
+}
+
+#progress-indicator .indicator.dt {
+    display:grid;
+    grid-template-columns: auto 1fr auto;
+    gap:8px;
+}
+
+#progress-indicator .icon {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color:var(--blue-200);
+    width:42px;
+    height:42px;
+    border-radius:100%;
+}
+
+#progress-indicator .icon svg {
+    width:24px;
+    height:24px;
+}
+
+#progress-indicator .tab-container {
+    display: flex;
+    justify-content: flex-start;
+    gap:8px;
+    overflow: hidden;
+    padding:8px;
+    border:1px solid var(--gray-300);
+    border-radius: 64px;
+}
+
+#progress-indicator .tab-container > div {
+    padding:4px 16px;
+    border-radius: 64px;
+    color: var(--gray-400);
+    font-size:var(--heading-xxxs);
+    font-weight:700;
+    user-select: none;
+    white-space: nowrap;
+}
+
+#progress-indicator .tab-container > div.completed {
+    color: var(--cobalt-600);
+    cursor:pointer;
+}
+
+#progress-indicator .tab-container > div.active {
+    color: var(--gray-800);
+    background-color:var(--blue-100);
+}
+
+#progress-indicator .checkout {
+    display:flex;
+    align-items: center;
+    padding:0 16px;
+    font-size:var(--type-xs);
+    color:var(--gray-600);
+    background-color:var(--gray-200);
+    border:1px solid var(--gray-300);
+    border-radius:24px;
+}
+
+/* MOBILE */
+
+#progress-indicator .indicator.mb {
+    display:none;
+}
+
+#progress-indicator .progress-bar {
+    width:100%;
+    height:4px;
+    border-radius:8px;
+    background-color:var(--gray-300);
+}
+
+#progress-indicator .progress-bar > div {
+    width:50%;
+    height:4px;
+    border-radius:8px;
+    background-color:var(--primary-blue);
+}
+
 
 
 /* QUANTITY INCREMENTOR *********************/
@@ -559,7 +705,7 @@
 }
 
 .context p {
-    font-size:var(--type-sm);
+    font-size:var(--type-xs);
 }
 
 .context svg {
@@ -633,5 +779,22 @@
 
 @media only screen and (max-width: 600px) {
 
+    /* ACCORDION */
+    .accordion .control {
+        padding:16px 0;
+    }
+
+    /* PROGRESS INDICATOR */
+    
+    #progress-indicator .indicator.dt {
+        display:none;
+    }
+    #progress-indicator .indicator.mb {
+        display:block;
+    }
+    #progress-indicator {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
 
 }
