--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ body {
     transition: all 1000ms;
 }
 
+.gray {
+    background-color:var(--gray-200);
+}
+
 #page, #skrollr-body {
     width:100%;
     /*height:100%;*/
@@ -118,6 +122,7 @@ body {
     --type-base: 18px;
     --type-lg: 24px;
 
+    --eyebrow-xs: 12px;
     --eyebrow-sm: 14px;
     --eyebrow-md: 16px;
     --eyebrow-lg: 20px; 
@@ -271,6 +276,16 @@ a.line:hover {text-decoration:none;}
     text-transform: uppercase;
 }
 
+.eyebrow.sm {
+    font-size: var(--eyebrow-sm);
+    text-transform: uppercase;
+}
+
+.eyebrow.xs {
+    font-size: var(--eyebrow-xs);
+    text-transform: uppercase;
+}
+
 .legal, .legal p {
     font-size:var(--type-legal)!important;
     color: var(--gray-700);
@@ -300,15 +315,6 @@ a.line:hover {text-decoration:none;}
     position: relative;
     display: block;
     padding-left: 1em;
-}
-
-
-
-.eyebrow {
-    text-transform: uppercase;
-}
-.eyebrow.sm {
-    font-size: var(--eyebrow-sm);
 }
 
 sup {
@@ -348,6 +354,12 @@ li span {
 .copy-block {
     display:grid;
     gap:24px;
+}
+
+.icon-header {
+    display:flex;
+    gap:16px;
+    align-items: center;
 }
 
 
@@ -411,7 +423,7 @@ li span {
 
 .price .plan::after, .price .add-on-mo::after {
     content: "/mo";
-    font-size: 0.3em;
+    font-size: 0.4em;
     vertical-align:baseline;
 }
 
@@ -454,6 +466,8 @@ li span {
     width:100%;
     height:100%;
     padding:32px 0;
+    display:grid;
+    gap:32px;
 }
 
 main {
@@ -488,6 +502,7 @@ main > section {
 .limited {
     padding-left: 32px;
     padding-right: 32px;
+    width:100%;
     max-width:var(--main-area-max);
     margin:auto;
 }
