--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,8 @@ body {
 
     --orange-600: #EA712F;
 
+    --green-600: #2D7E24;
+
     --border-radius: 16px;
 
     --heading-xxxs: 12px;
@@ -346,6 +348,7 @@ li span {
 
 .hr {
     height:1px;
+    margin:8px 0;
     background-color: var(--gray-400);
 }
 
@@ -368,6 +371,14 @@ li span {
 .price {
     display: flex;
     flex-direction: column;
+    position: relative;
+}
+
+.price.detailed {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    gap:8px;
 }
 
 .price.right {
@@ -458,6 +469,96 @@ li span {
     font-size:0.75em;
     font-weight:400;
 }
+
+.tooltip {
+    width:16px;
+    height:16px;
+    padding-bottom:24px;
+}
+
+
+.tooltip .block {
+    display:none;
+    position:absolute;
+    bottom:-8px;
+    left:0;
+    width:100%;
+    transform: translateY(100%);
+    z-index:1;
+}
+
+.tooltip.active .block {
+    
+}
+
+.tooltip .block .tip {
+    position:absolute;
+    top:-8px;
+    left:32px;
+    z-index:2;
+    width:16px;
+    height:16px;
+    background-color:#fff;
+    transform: rotateZ(-135deg);
+    box-shadow:3px 3px 3px #0002;
+}
+
+.tooltip .block .close {
+    position:absolute;
+    top:0px;
+    right:0px;
+    width:24px;
+    height:24px;
+    z-index:4;
+}
+
+.tooltip .content {
+    background-color:#fff;
+    box-shadow: 0px 2px 8px rgba(37, 48, 58, 0.2), 0px 2px 4px -1px rgba(37, 48, 58, 0.12), 0px 2px 12px rgba(37, 48, 58, 0.1);
+    padding:16px;
+    border-radius: 8px;
+    display:grid;
+    gap:8px;
+    position:relative;
+    
+}
+
+.tooltip .content .breakdown {
+    display:grid;
+    gap:8px;
+}
+
+.tooltip .content .breakdown > div {
+    display:flex;
+    justify-content: space-between;
+    gap:16px;
+    font-weight:400;
+    font-size:var(--type-xs);
+}
+
+.tooltip .content .breakdown .plan-price,
+.tooltip .content .breakdown .total {
+    font-size:var(--heading-xxs);
+    font-weight:700;
+}
+
+.tooltip .content .breakdown .discounts svg {
+    fill:var(--green-600);
+    width:16px;
+    height:16px;
+}
+
+.tooltip .content .breakdown .discounts > div:first-child {
+    display:flex;
+    /* align-items: center; */
+    gap:4px;
+}
+
+.tooltip .content .breakdown .discounts > div:last-child {
+    color:var(--green-600);
+}
+
+
 
 
 /* MAIN - CONTENT ***************************/
