reduce legal on Fiber

--- a/css/cards.css
+++ b/css/cards.css
@@ -705,6 +705,14 @@
     display:flex;
 }
 
+.plan.horizontal .legal span {
+    display:none;
+}
+
+.plan.horizontal.expanded .legal span {
+    display:inline;
+}
+
 /*.plan.horizontal #acc-nl .content {
     transition: 1000ms;
 }*/
