--- a/css/components.css
+++ b/css/components.css
@@ -453,6 +453,31 @@
     fill: var(--gray-800);
 }
 
+.signature {
+    display:flex;
+    align-items: center;
+    position:relative;
+    gap:8px
+}
+
+.signature > .badge {
+    background-color:var(--gray-200);
+    border:1px solid var(--gray-300);
+    margin-bottom:0;
+    transition: 500ms;
+}
+
+.signature > .badge svg,
+.signature > .tooltip svg {
+    min-width:16px;
+    min-height:16px;
+    fill: var(--cobalt-600);
+}
+
+.card.active .signature > .badge {
+    background-color:#fff;
+}
+
 
 /* SEARCH BAR ***************************/
 
