--- a/css/components.css
+++ b/css/components.css
@@ -240,12 +240,18 @@
 
 /* PROGRESS INDICATOR *********************************/
 #progress-indicator {
+    position: relative;
     z-index:10;
+}
+
+#progress-indicator.sticky {
+
 }
 
 
 #progress-indicator #progress-indicator-block {
     width:100%;
+    position: relative;
 }
 
 #progress-indicator.sticky #progress-indicator-block {
@@ -264,6 +270,8 @@
     padding:0 32px;
     max-width:var(--main-area-max);
     margin:16px auto 0;
+    position:relative;
+    z-index:2;
 }
 
 #progress-indicator.sticky #progress-indicator-container {
@@ -321,7 +329,7 @@
     gap:8px;
 }
 
-#progress-indicator .icon {
+#progress-indicator .indicator .icon {
     display:flex;
     justify-content: center;
     align-items: center;
