--- a/css/components.css
+++ b/css/components.css
@@ -241,11 +241,11 @@
 /* PROGRESS INDICATOR *********************************/
 #progress-indicator {
     position: relative;
-    z-index:10;
+    z-index:100;
 }
 
 #progress-indicator.sticky {
-
+    
 }
 
 
@@ -271,11 +271,17 @@
     max-width:var(--main-area-max);
     margin:16px auto 0;
     position:relative;
-    z-index:2;
+    z-index:1;
 }
 
 #progress-indicator.sticky #progress-indicator-container {
-    margin:0 auto;
+    padding:16px 32px 0;
+    margin:0 auto 0;
+    background-color:#fff;
+}
+
+#progress-indicator.sticky #progress-indicator-container {
+    z-index:3;
 }
 
 
@@ -283,6 +289,10 @@
     background-color:#fff;
     border-radius:16px;
     padding-bottom:16px;
+}
+
+#progress-indicator.sticky #progress-indicator-container .container {
+    border-radius:0px;
 }
 
 
